# AquaOps

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
alembic/: env.py
alembic/versions/: 20260709_0001_initial_schema.py  20260709_0002_tank_parameter_targets.py  20260709_0003_user_preferences.py  20260709_0004_plant_care_mode.py  20260709_0005_species_catalog.py  20260710_0006_tank_maintenance_configs.py  20260714_0007_tank_care_profiles.py  20260715_0008_problem_tracking.py  20260715_0009_care_plan_editor.py
app/: __init__.py  cli.py  main.py
app/core/: __init__.py  config.py  security.py  time.py
app/demo/: __init__.py  seed.py
app/domain/: __init__.py  care_plans.py  care_profiles.py  enums.py  events.py  maintenance.py  preferences.py  problems.py  reminders.py  water.py
app/infrastructure/: __init__.py
app/scripts/: __init__.py  seed_demo.py
app/web/: __init__.py  dependencies.py  presentation.py
docker/nginx/: aquaops.conf.example
docs/: architecture.md  backup-restore.md  deployment.md  developer-setup.md  erd.md  roadmap.md
docs/architecture/: database-schema.md  overview.md  roadmap.md
scripts/: deploy-container.sh  deploy-image.sh  postgres-backup.sh  postgres-restore.sh
tests/: conftest.py
tests/application/: test_dashboard_service.py
tests/integration/: test_care_plan_repository.py  test_inventory_repository.py  test_notifications_repository.py  test_postgresql_platform.py  (+2 more)
(+99 files in other folders)
