[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquaops"
version = "0.1.0"
description = "A production-quality personal aquarium tracker built with FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "William Burch" }]
dependencies = [
  "alembic>=1.13,<2.0",
  "bcrypt>=4.1,<5.0",
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
aquaops = "app.cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0,<26.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py313"]
